# obs-studio

./: buildinit.cmd
plugins/: CMakeLists.txt
plugins/obs-datetime/: CMakeLists.txt
plugins/obs-datetime/data/locale/: en-US.ini
plugins/obs-datetime/gdiplus/: obs-datetime.cpp
